# cnn_mel_spectrogram

./: README.md  audio_dataset.py  libs_install.sh  main.py  project_init_uv.txt  pyproject.toml
EDA/: esc50_eda.ipynb
configs/: config.yaml
configs/aug/: default.yaml  none.yaml  spec_augment.yaml
configs/data/: esc50.yaml
configs/metrics/: multiclass.yaml
configs/model/: spec_cnn.yaml
configs/optim/: adam.yaml
configs/pooling/: avg.yaml  gem.yaml
configs/sched/: cosine.yaml
configs/train/: base.yaml
logdirs/debug_run2/wandb/: latest-run
logdirs/debug_run2/wandb/run-20260607_123836-q0d6ywit/: run-q0d6ywit.wandb
logdirs/debug_run2/wandb/run-20260607_123836-q0d6ywit/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
scripts/: infer.py  train.py
src/esc50/: __init__.py
src/esc50/data/: __init__.py  dataset.py  metadata.py  split.py
src/esc50/inference/: __init__.py  evaluate.py  predict.py
src/esc50/models/: __init__.py  pooling.py  spec_cnn.py
src/esc50/training/: __init__.py  forward.py  lit_module.py  train.py
src/esc50/utils/: __init__.py  metrics.py
tests/: test_metrics.py  test_pooling.py
