[project]
name = "base-cnn-spectrogram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiomentations>=0.43.1",
    "ipykernel>=7.2.0",
    "ipython>=9.14.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "lightning>=2.6.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchmetrics>=1.9.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]
